--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!Doctype html>
-<html　land="ja">
+<html>
     <head>
         <meta charaset="utf-8"/>
         <title><mark>日本のあいさつ</mark></title>
@@ -34,7 +34,7 @@
             <tr><td>こんばんわ</td><td>GOOD EVENING</td></tr>
             <tr><td>さよなら</td><td>GOOD BYE</td></tr>
         </table>
-        <p><ing src="image/player.pmg"alt="猫のイラスト"/></p>
+        <p><img src="image/player.pmg"alt="猫のイラスト"/></p>
         <form id="top" action="#" method="post">
             <p><input type>="text"</p>
 
