--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!Doctype html>
-<html>
+<html　land="ja">
     <head>
         <meta charaset="utf-8"/>
-        <title><mark>日本のあいさつ</mark></title>
+        <title>日本のあいさつ</title>
     </head>
     <body>
         <p><a href="http://www.t-kougei.ac.jp/index.html">
         工芸大学の公式ページ</a>へのリンク</p>
-        <p>日本の挨拶の<br>説明をここではしています<br>適当です</p>
+        <p><mark>日本の挨拶</mark>の<br>説明をここではしています<br>適当です</p>
         <h1><strong>挨拶一覧</strong></h1>
         <ul>
             <li>はじめまして</li>
@@ -34,10 +34,10 @@
             <tr><td>こんばんわ</td><td>GOOD EVENING</td></tr>
             <tr><td>さよなら</td><td>GOOD BYE</td></tr>
         </table>
-        <p><img src="image/player.pmg"alt="猫のイラスト"/></p>
+        <p><ing src="https://github.com/yurth131/web2-2/blob/master/player.png?raw=true"alt="猫のイラスト"/></p>
         <form id="top" action="#" method="post">
             <p><input type>="text"</p>
 
     </body>
 
-</html>    
+</html>   
