--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!Doctype html>
-<html　land="ja">
+<html>
     <head>
         <meta charaset="utf-8"/>
         <title>日本のあいさつ</title>
@@ -34,7 +34,7 @@
             <tr><td>こんばんわ</td><td>GOOD EVENING</td></tr>
             <tr><td>さよなら</td><td>GOOD BYE</td></tr>
         </table>
-        <p><ing src="https://github.com/yurth131/web2-2/blob/master/player.png?raw=true"alt="猫のイラスト"/></p>
+        <p><img src="https://github.com/yurth131/web2-2/blob/master/player.png?raw=true"alt="猫のイラスト"/></p>
         <form id="top" action="#" method="post">
             <p><input type>="text"</p>
 
