--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <tr><td>こんばんわ</td><td>GOOD EVENING</td></tr>
             <tr><td>さよなら</td><td>GOOD BYE</td></tr>
         </table>
-        <p><img src="https://github.com/yurth131/web2-2/blob/master/player.png?raw=true"alt="猫のイラスト"/></p>
+        <p><img src="https://github.com/yurth131/web2-2/blob/master/player.png"alt="猫のイラスト"/></p>
         <form id="top" action="#" method="post">
             <p><input type>="text"</p>
 
